#116 Löschen von Buchungen mit "Ja" bestätigen - added dialog to confirm deletion of booking [skip ci]